@@ -2,6 +2,9 @@ chaosvpn (2.19~dev-0) unstable; urgency=low
 
   * Development version
 
+  * $use_dynamic_routes: Support compressed IPv6 addresses in
+    subnet-up/down shellscript, as used by latest tinc 1.1-git.
+
  -- Sven-Haegar Koch <haegar@sdinet.de>  Fri, 08 Aug 2014 00:23:26 +0200
 
 chaosvpn (2.18-0) unstable; urgency=low
